[package]
name = "Game"
version = "0.1.0"
authors = ["Madara <guesswecan@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.14"
specs-derive = "0.4"

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["image"]

[[example]]
name = "01_window"

[[example]]
name = "02_game_loop"

[[example]]
name = "03_image"

[[example]]
name = "04_sprite"

[[example]]
name = "05_player"

[[example]]
name = "06_move1"

[[example]]
name = "07_move2"

[[example]]
name = "08_anim"

[[example]]
name = "09_component"

